Fix issue where category selector is overlapped

--- a/src/components/views/css/Dashboard.css
+++ b/src/components/views/css/Dashboard.css
@@ -24,6 +24,7 @@
     position: sticky;
     top: 0;
     width: 100%;
+    z-index: 10;
 }
 
 #category label {
